zarf-bb-work/podinfo-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    zarf.dev/agent: ignore
    istio-injection: enabled
  name: podinfo
