zarf-bb-work/podinfo-too-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
  name: podinfo-too
  namespace: podinfo
spec:
  gateways:
  - istio-system/passthrough
  hosts:
  - podinfo-too.bigbang.dev
  tls:
  - match:
    - sniHosts: ["podinfo-too.bigbang.dev"]
    route:
    - destination:
        host: podinfo-too
        port:
          number: 9899
