zarf-bb-work/prom-vs.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    labels:
    name: prometheus
    namespace: monitoring
  spec:
    gateways:
    - istio-system/passthrough
    hosts:
    - prometheus.bigbang.dev
    http:
    - route:
      - destination:
          host: monitoring-monitoring-kube-prometheus.monitoring.svc.cluster.local
          port:
            number: 9090
kind: List
metadata:
  resourceVersion: ""
