zarf-bb-work/podinfo-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-in-ns-podinfo
  namespace: podinfo
spec:
  egress:
  - to:
    - podSelector: {}
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
status: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-ingress
  namespace: podinfo
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: istio-controlplane
      podSelector:
        matchLabels:
          app: passthrough-ingressgateway
    ports:
    - port: 9899
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: podinfo
  policyTypes:
  - Ingress
  - Egress
status: {}
---
